# fantasy-footbot

./: .gitignore  README.md  conda.yml  latest_data.ps1  latest_data.sh  player_stats.py  pyproject.toml  requirements.txt
src/: features.py  player.py  player_stats.py  roi.py
